# mihomo-rs

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  README_CN.md  crates.js  deny.toml  help.html  settings.html  src-files.js  test-config.yaml
.github/: dependabot.yml
.github/scripts/: generate-homebrew-formula.sh
.github/workflows/: benchmark.yml  changelog.yml  ci.yml  coverage.yml  dependabot.yml  docs.yml  issue-translator.yml  release.yml  security.yml  stale.yml
benches/: client_benchmark.rs  rules_benchmark.rs
examples/: 01_bootstrap.rs  02_config_profiles.rs  03_version_inventory.rs  04_service_lifecycle_dry_run.rs  05_proxy_queries.rs  06_connection_queries.rs  07_streaming.rs  08_complete_workflow.rs  README.md  advanced_usage.rs  basic_usage.rs  complete_workflow.rs  config_management.rs  custom_home_env.rs  custom_home_sdk.rs  get_memory.rs  list_proxies.rs  memory_usage.rs  migration_helper.rs  monitor_traffic_memory.rs  proxy_groups.rs  sdk_complete_workflow.rs  sdk_full_test.rs  service_management.rs  stream_logs.rs  stream_logs_advanced.rs  stream_logs_filtered.rs  stream_traffic.rs  stream_usage.rs  switch_proxy.rs  test_custom_home.rs  test_delay.rs  test_ensure_controller.rs  test_first_time_setup.rs  test_port_occupation.rs  version_management.rs
mihomo_rs/: all.html  fn.install_mihomo.html  fn.start_service.html  fn.stop_service.html  fn.switch_proxy.html  index.html  sidebar-items.js
mihomo_rs/cli/: index.html  sidebar-items.js
mihomo_rs/config/: index.html  sidebar-items.js
mihomo_rs/connection/: index.html
mihomo_rs/core/: index.html  sidebar-items.js
mihomo_rs/proxy/: index.html  sidebar-items.js
mihomo_rs/service/: index.html  sidebar-items.js
mihomo_rs/version/: index.html  sidebar-items.js
scripts/: coverage.sh
search.index/: 012bc27f6fdf.js  033183222161.js  0425c9e19ce7.js  0a97eef5bdbe.js  1328a41b345c.js  132b1ae0bdcc.js  19820257796b.js  1e3ffed007fa.js  1e508e39aeb6.js  219922648f36.js  26c1770f5f42.js  2834ae8befc1.js  2af69af93ff6.js  315db93004d5.js  3405faa4f4f8.js  3531fc3c9e8a.js  3bebebdf6b18.js  409498582270.js  412389a787d9.js  46fd3e69845f.js  4710b8ab151e.js  4b6430159c81.js  4c07af8c59d2.js  4cc65edefe0a.js  4f8a908e4768.js  50080ba3130f.js  504cef129949.js  52912cd93b91.js  5b1927089754.js  5e94b60fe48a.js  631a0c99f93d.js  66346edba0d7.js  69060d48533e.js  6929f1990d54.js  6b06a5250570.js  6fd63b7b1b89.js  6fdcd8876929.js  75cb3d56afaf.js  7611541e379e.js  79ea5220df6b.js  (+5 more)
search.index/crateNames/: b0cb614c3b8b.js
search.index/desc/: 4635ba20d1d5.js
search.index/entry/: f4761d1c7c8c.js
search.index/function/: 706d1613c648.js
search.index/generic_inverted_index/: bd1248c5dfb0.js
search.index/name/: 237f70659ce1.js
search.index/normalizedName/: f16544042a42.js
search.index/path/: 82c4aa38c0da.js
src/: client.rs  config.rs  error.rs  lib.rs  logger.rs  main.rs  monitor.rs  proxy.rs  retry.rs  rules.rs  service.rs  types.rs  utils.rs
src/cli/: mod.rs  (+3 more)
tests/: cli_handlers_spec.rs  client_http_spec.rs  client_transport_error_spec.rs  config_manager_controller_branches_spec.rs  config_manager_edge_spec.rs  config_manager_spec.rs  config_manager_test.rs  connection_manager_spec.rs  connection_manager_test.rs  download_test.rs  input_validation_spec.rs  integration_tests.rs  lib_home_spec.rs  lib_test.rs  lib_top_level_success_spec.rs  performance_tests.rs  proxy_manager_spec.rs  proxy_manager_test.rs  public_api_spec.rs  service_manager_runtime_spec.rs  service_manager_spec.rs  test_utils.rs  version_manager_spec.rs  version_manager_test.rs
(+164 files in other folders)
