[package]
name = "mihomo-rs"
version = "1.0.0"
edition = "2021"
authors = ["dingdangmaoup"]
description = "A Rust SDK and CLI tool for mihomo proxy management with service lifecycle management, configuration handling, and real-time monitoring"
license = "MIT"
repository = "https://github.com/DINGDANGMAOUP/mihomo-rs"
homepage = "https://github.com/DINGDANGMAOUP/mihomo-rs"
documentation = "https://docs.rs/mihomo-rs"
readme = "README.md"


[dependencies]
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "1.0"
anyhow = "1.0"
tokio-util = { version = "0.7", features = ["io"] }
sysinfo = "0.30"
url = "2.5"
crossterm = "0.27"
log = "0.4"
env_logger = "0.11"
dirs = "5.0"
toml = "0.8"
flate2 = "1.0"

[dev-dependencies]
tempfile = "3.22"

[[bin]]
name = "mihomo-rs"
path = "src/main.rs"

[lib]
name = "mihomo_rs"
path = "src/lib.rs"
