[package]
name = "mihomo-rs"
version = "1.3.1"
edition = "2021"
authors = ["dingdangmaoup"]
description = "A Rust SDK and CLI tool for mihomo proxy management with service lifecycle management, configuration handling, and real-time monitoring"
license = "MIT"
repository = "https://github.com/DINGDANGMAOUP/mihomo-rs"
homepage = "https://github.com/DINGDANGMAOUP/mihomo-rs"
documentation = "https://docs.rs/mihomo-rs"
readme = "README.md"


[dependencies]
tokio = { version = "1.49", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
clap = { version = "4.5.59", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "2.0"
anyhow = "1.0"
tokio-util = { version = "0.7", features = ["io"] }
sysinfo = "0.38.1"
url = "2.5"
crossterm = "0.27"
log = "0.4"
env_logger = "0.11"
dirs = "6.0"
toml = "0.9"
flate2 = "1.1"
zip = "7.4"
tokio-tungstenite = { version = "0.28.0", features = ["rustls-tls-native-roots"] }
futures-util = "0.3"

[dev-dependencies]
tempfile = "3.24"
mockito = "1.7.2"

[[bin]]
name = "mihomo-rs"
path = "src/main.rs"

[lib]
name = "mihomo_rs"
path = "src/lib.rs"
